web icon update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <script src="config.js"></script>
   <title>Twin Cities: Manchester and Wuhan</title>
+  <link rel="page icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1527/1527807.png">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpHvJ3OmlFeu3pJ3kcGMlR1860aQSepLo"></script>
   <script src="map.js"></script>
 </head>
