--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     in and bronze musical bells from his 5th-century B.C. tomb.</p>
     /*HTML paragraph tag that displays a block of text on the web page. The text describes Wuhan as a sprawling commercial center in Central China's Hubei province, and mentions some of the city's geographical features and cultural attractions.*/
   <div id="wuhanMap"></div>
-    /* HTML div tag that creates a container element with an id attribute set to "wuhanMap". */
+
+  <?php include 'weather.php'; ?>
 </body>
     /* the closing HTML body tag, which marks the end of the body section of the web page. All visible content on a web page is contained within the body section. */
 <script>
