Moving content -> bootstrap index file

--- a/BootStrap/index.html
+++ b/BootStrap/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
+<!--HTML comment -->
+<!--specifies that the document is written in HTML5  -->
 <html lang="en">
+<html>
+    <!-- HTML tag  -->
 <head>
+   <!--The <head> tag in HTML is used to contain metadata about an HTML document, such as the title, scripts, styles, and other information that is not displayed on the page itself. -->
     <meta charset="=UTF-8"
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-wodtj, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css"/>
+  <!--The link tag tells the browser where to find the CSS file, which is specified in the href attribute, and the rel attribute indicates that it is a stylesheet. -->
+
 
 <!-- Styling the aesthetics of the ("col"umn) class-->
 <style>
